# auto-hitch

./: README.md  path.py  simulator.py
controller/: CMakeLists.txt
controller/inc/: InputController.hpp  InputPlanner.hpp  InputSchedule.hpp  PIController.hpp  PathPlanner.hpp  Point.hpp  ReferencePath.hpp  TrajectoryController.hpp  Vehicle.hpp
controller/src/: InputController.cpp  Point.cpp  main.cpp
simulator/: path.py  simulator.py
